# brepl

./: .gitignore  README.md  pyproject.toml  test_agent_flow.py
src/brepl/: __init__.py  completion.py  detector.py  drivers.py  mcp_server.py  protocol.py  screen.py  session.py  utils.py
